# Void-Core

./: LICENSE  Makefile  README.md  Void_Code_Language_Specification.docx  install.sh  package.json  pyproject.toml  void.config
.github/workflows/: deploy.yml
docker/: Dockerfile  Dockerfile.gpu  docker-compose.yml
docs/: generate_void_spec.js  index.html
examples/: programs.void
models/training/: train_void_model.py
models/void-1/: Modelfile  README.md
models/void-1/training/: config.yaml  dataset-spec.md
models/void-2/: Modelfile  README.md
models/void-2/training/: config.yaml  dataset-spec.md
models/void-moa/: Modelfile  README.md  router.py
models/void-moa/training/: config.yaml  dataset-spec.md
src/: void-ai.js  void-interpreter.js  void-mix.void  void-runtime.js  void.js  void1-coder.void  void1.js  void2-linguist.void  void2.js  voidmix.js
src/agent/: agent.py  deepthink.py  tools.py
src/api/: server.py
src/core/: memory.py  runtime.py  tokenizer.py
src/nlp/: chat.py  creative.py  voidcode.py
test/: examples.void
void-ai/: package.json
void-ai/src/app/: globals.css  layout.tsx  page.tsx
void-ai/src/app/api/agent/: route.ts
void-ai/src/app/api/chat/: route.ts
void-ai/src/app/api/deepthink/: route.ts
void-ai/src/components/: agent-terminal.tsx  chat-input.tsx  chat-panel.tsx  deepthink-panel.tsx  header.tsx  message-bubble.tsx  mode-indicator.tsx  sidebar.tsx  void-ai.tsx  void-code-editor.tsx
void-ai/src/hooks/: use-agent.ts  use-chat.ts  use-deep-think.ts  use-void-code.ts
void-ai/src/lib/: ai.ts
(+1 files in other folders)
